 (Format: Year/Month/Day)
Changes for 1.0rc3:
*06/07/26:
   * Fixed torn menus so they don't close on exec items (Mark)
     FbTk/Menu.cc
   * Updated pt_PT translations (Thanx Antonio Gomes)
     nls/pt_PT/Translation.m
   * Added resource and menu item for maximizing over external tabs (Mark)
     Screen.cc/hh Window.cc
*06/07/25:
   * Fix so that focus doesn't revert away from command dialogs (Mark)
     fluxbox.cc/hh CommandDialog.cc
   * Fix background style item so that it works when the previous style
     didn't have one set (Mark)
     Screen.cc RootTheme.hh
*06/07/23:
   * Use a timer to make sure focus always reverts if possible (Mark)
     fluxbox.cc/hh and reverse patch from 06/07/20
*06/07/22:
   * Ewmh compliance updates: (Mark)
     - implemented _NET_WM_MOVERESIZE_CANCEL (new in version 1.4.draft-1)
     - move windows to last remaining workspace when a workspace is removed
     - implemented _NET_REQUEST_FRAME_EXTENTS
     Ewmh.cc/hh Workspace.cc/hh Screen.cc
*06/07/21:
   * Stop using fixed values for num/caps/scroll lock, and ignore scroll lock
     as a modifier (Mark)
     FbTk/KeyUtil.cc/hh
*06/07/20:
   * Fix _NET_WM_MOVERESIZE, bug #1525404 (Mark)
     Ewmh.cc
   * Properly revert focus when two windows close simultaneously (Mark)
     WinClient.cc/hh FbTk/FbWindow.hh fluxbox.cc Window.cc
*06/07/19:
   * Preserve order of focused windows on restart (Mark)
     Workspace.cc Screen.cc FocusControl.cc/hh
*06/07/16:
   * Fix a bug in Transparent.cc, (Henrik)
    #1362913 Fluxbox core dumps on Solaris 
    FbTk/Transparent.cc
*06/07/14:
   * Fix a possible bug with window cycling on multiple screens (Mark)
     fluxbox.cc WorkspaceCmd.cc
   * Include minimized windows when "alt-tabbing", added 16 to the
      Next/PrevWindow bitmask to disable the behavior (Mark)
      FocusControl.cc/hh
*06/07/13:
   * Remove some redundant code for loading styles (Mark)
     fluxbox.cc Screen.cc RootTheme.cc/hh
   * Fix background: random (Mark)